Fix blur gradient width on Design Page (#180)
* add responsiveness to contact section

* add right marquee data for design hero section

* fix top position for mobile on home page

* fix mobile view for home page

* fix marquee gap on home page

* fix home page from being off centered on mobile view

* update width on blur gradient

--- a/src/features/layout/hero/hero.module.scss
+++ b/src/features/layout/hero/hero.module.scss
@@ -204,7 +204,7 @@
     z-index: 200;
     right: 0;
     bottom: -200px;
-    width: 50vw;
+    width: 100%;
     height: 500px;
     background: linear-gradient(
       180deg,
